Fixed move button bug on Firefox

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -160,6 +160,7 @@ input:-webkit-autofill, input:-webkit-autofill:focus {
 }
 
 .btn-move {
+	font-size: 10px;
 	background-color: $btn-move;
 	border-color: $btn-move-border;
 }
